--- a/CSS/style.css
+++ b/CSS/style.css
@@ -83,7 +83,7 @@ html {
       rgb(38, 39, 39) 0%,
       rgba(39, 39, 39, 0) 100%
     ),
-    url(https://gauravdhawale.github.io/Gaurav.jpg);
+    url(https://gauravdhawale.github.io/PortFolio/Gaurav.jpg);
   background-size: cover;
 }
 #Home h1 {
