--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,6 @@
 body {
   background-color: rgb(51, 53, 53);
 }
-html {
-  overflow: hidden;
-}
 ::-webkit-scrollbar {
   width: 0.4rem;
   height: 0.4rem;
@@ -16,7 +13,7 @@ html {
   border-radius: 20rem;
 }
 .main-container {
-  height: 41rem;
+  height: 100vh;
 }
 #about,
 #Resume,
